src/test/deca/context/invalid/ContextSansObjet/Boucle/condWhileNonBooleenne.deca
//description:
// test de la structure while avec une condition non booléenne
//
//Résultat:
//  Erreur contextuelle
//  Ligne 9 : la condition doit étre de type boolean
{
int i = 1;
while(i)
{
println("bizarre");
}
}
